--- a/airforce.css
+++ b/airforce.css
@@ -1,12 +1,15 @@
 .intro1{ background-image: url('https://images.pexels.com/photos/1571730/pexels-photo-1571730.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
          background-size: cover;
-         background-repeat; norepeat;
+         background-repeat:norepeat;
          width: 100%;
-         height: 100vh;
+         height: auto;
+		 padding-bottom:10%;
+		 margin:0px auto;
 }
 .intro2{ background-image: linear-gradient(to right,#ffe6e6 ,#e60000);
          width: 100%;
-         height: 18%;
+         height:auto;
+	     margin: auto auto;	 
 }
 h4{ font-family: 'Ramabhadra', sans-serif;
     text-transform: uppercase;
@@ -15,29 +18,27 @@ h4{ font-family: 'Ramabhadra', sans-serif;
     word-spacing: 12px;
     letter-spacing: 5px;
     text-shadow: 3px 2px 5px white;
+	
 }
-.content{ background-image: url('image/airforce1.jpg'); 
+.content{ background-image: url('airforce1.jpg'); 
           background-size: cover;
           height: 70%;
-          width: 75%;
-          position: absolute;
-          left: 50%;
-          top: 60%;
-          transform: translate(-50%, -50%);
-          box-shadow: 7px 8px 9px black;
+          width: 89%;
+          margin:0px auto;
+		  box-shadow: 7px 8px 9px black;
           animation: slider 30s infinite linear;
 }
 @keyframes slider { 0%{
-                        background-image: url('image/airforce1.jpg');
+                        background-image: url('airforce1.jpg');
                         }
                     25%{
-                        background-image: url('image/airforce2.jpg');
+                        background-image: url('airforce2.jpg');
                         }
                      50%{
-                        background-image: url('image/airforce3.jpg');
+                        background-image: url('airforce3.jpg');
                         }
                      75%{
-                        background-image: url('image/airforce4.jpg');
+                        background-image: url('airforce4.jpg');
                         }
 }
 h3{ font-family: 'Rowdies', cursive;
@@ -48,10 +49,10 @@ h3{ font-family: 'Rowdies', cursive;
 
 }
 .aboutus{ background-color: #3366ff;
-          height: 40%;
+          height:auto;
           width: 100%;
           margin: -2em 0em 0em 0em;     
-
+           
 }
 .anything{ font-family: 'Ubuntu', sans-serif;
            font-size: 25px;
