--- a/navy.css
+++ b/navy.css
@@ -8,41 +8,41 @@
          font-size: 4em;
          background-image: linear-gradient(to right,#ccffdd ,#00cc44 );
          width: 100%;
-         height: 10%;
+         height: auto;
          text-align: center;
          text-transform: uppercase;
-         padding: 1% 0% 1% 0%;
+         margin:0px auto;
          word-spacing: 10px;
          letter-spacing: 10px;
          text-shadow: 4px 3px 4px white;
        
 }
-.picture{ background-image: url('image/navy1.jpg');
-          height: 80vh;
+.picture{ background-image: url('navy1.jpg');
+          height: 70vh;
           width: 80%;
-          background-size: cover;
-          margin: 1.5% 6% 4% 9%;
-          box-border: 6px;
+          background-size:cover;
+          margin: 4% 6% 4% 9%;
+          border-radius: 6px;
           box-shadow: 5px 5px 9px black;
           animation:  slider 30s infinite linear;
        
 }
 @keyframes slider{ 0%{
-                       background-image: url('image/navy1.jpg');
+                       background-image: url('navy1.jpg');
                       }
                    25%{
-                       background-image: url('image/navy2.jpg');
+                       background-image: url('navy2.jpg');
                        }
                    50%{
-                        background-image: url('image/navy3.jpg');
+                        background-image: url('navy3.jpg');
                        }
                    75%{
-                        background-image: url('image/navy4.jpg');
+                        background-image: url('navy4.jpg');
                        }
 }
 .aboutus{ background-color: #ff5050;
           width: 100%;
-          height: 45%;
+          height: auto;
           margin: -3.5% 0% 0% 0%;
 }
 h3{ font-family: 'Concert One', cursive;
